# beads

./: .env.example  .env.example.dev  .env.example.local  .env.example.prod  .gitignore  BUILD-STATUS.md  DATABASE.md  Dockerfile.backend  README.md  alembic.ini  claude.md  docker-compose.yml  init.sql  module_banners.riv  pyproject.toml
.claude/: settings.json
.github/workflows/: deploy-env.yml  deploy.yml  lint.yml  terraform-validate.yml  test-backend.yml  test-frontend.yml
apps/web/: .gitignore  Dockerfile  README.md  next.config.ts  package-lock.json  package.json
archive/tempdocs/: BUILD_PLAN.md  aggregate.py  hierarchical-auto-close.md  phase1.md  phase8-completed.md
configs/lti/: platform.json  public.key
content/: README.md
docs/: CLI-USAGE-GUIDE.md  TEST-REPORT.md  configuration.md  ingestion-grading-walkthrough.md  production-hardening-plan.md
docs/UX/: feedback-questionnaire.md  learner-guide.md  sme-guide.md
docs/adr/: 001-learner-scoped-task-progress.md  002-submission-driven-task-completion.md  003-lti-first-access-model.md  (+1 more)
docs/design/: rive.html  (+3 more)
frontend/: next.config.ts  package-lock.json  package.json
infrastructure/: CLAUDE.md  README.md
scripts/: convert_mysql_to_sqlite.py  e2e_agentic_test.py  reingest_with_summaries.py  setup_mysql.sh
services/agent-tutor/: pyproject.toml
services/agent-tutor/src/agent/: __init__.py  config.py  graph.py  main.py  mysql_tools.py  prompts.py  state.py  tools.py
services/agent-tutor/src/agent/memory/: __init__.py  namespaces.py  reader.py  schemas.py  store.py
services/agent-tutor/tests/: conftest.py  test_e2e_agentic_workflow.py
services/agent-tutor/tests/test_agent_module/: test_agent.py
services/agent-tutor/tests/test_memory/: test_namespaces.py  test_reader.py  test_schemas.py  test_store.py  test_tools_memory.py
services/api-server/: README.md  pyproject.toml
services/api-server/src/api/: admin_routes.py  agents.py  app.py  auth.py  client.py  database.py  frontend_routes.py  inspector_routes.py  routes.py  settings.py
services/api-server/src/api/lti/: __init__.py  adapter.py  config.py  grades.py  middleware.py  routes.py  storage.py  users.py
services/api-server/tests/: conftest.py  test_admin_ingest.py  test_auth.py  test_lti_debug.py  test_lti_dev_login.py  test_lti_jwks.py  test_lti_launch.py  test_lti_storage.py  test_lti_users.py  test_protected_endpoints.py  test_workspace_context.py
services/ltt-core/: README.md  pyproject.toml
services/ltt-core/src/ltt/cli/: main.py
services/ltt-core/src/ltt/db/: connection.py
services/ltt-core/src/ltt/db/migrations/: env.py
services/ltt-core/src/ltt/db/migrations/versions/: 09975b8c1d6c_add_requires_submission_to_tasks.py  0a6a975f3c66_add_tutor_persona_and_workspace_type_to_.py  87a33b9dfbb7_add_lti_launches.py  965c76772f9f_add_workspace_type_to_tasks.py  b4e8c2a13f91_add_conversation_threads.py  d187d5f7ad45_add_summary_field_to_tasks.py  e7f3a1b2c4d5_add_ingestion_fields.py  f8d4e6a9b1c3_add_grade_fields_to_validations.py  f95d2d11a478_add_lti_user_mappings.py
services/ltt-core/src/ltt/models/: __init__.py  acceptance_criterion.py  content.py  context.py  conversation_thread.py  dependency.py  event.py  learner.py  learner_task_progress.py  learning.py  lti_launch.py  lti_mapping.py  project_schema.py  status_summary.py  submission.py  task.py  validation.py
services/ltt-core/src/ltt/services/: __init__.py  export.py  ingest.py  progress_service.py  task_service.py  validation_service.py
services/ltt-core/src/ltt/services/learning/: __init__.py  content.py  llm_summarization.py  objectives.py  summarization.py
services/ltt-core/src/ltt/services/validators/: simple.py
services/ltt-core/src/ltt/tools/: control.py  feedback.py  progress.py  schemas.py
services/ltt-core/src/ltt/utils/: ids.py
services/ltt-core/tests/: test_basic.py  test_cli.py
services/ltt-core/tests/services/: test_dependency_service.py  test_epic_blocking_propagation.py  test_export.py  test_ingest.py  test_learning_content.py  test_learning_objectives.py  test_learning_progress.py  test_learning_summarization.py  test_progress_service.py  test_submission_validation.py  test_task_service.py
services/ltt-core/tests/tools/: test_control.py  test_feedback.py  test_navigation.py  test_progress.py
services/ltt-settings/: pyproject.toml
services/ltt-settings/src/ltt_settings/: __init__.py  settings.py
simulation_logs/: simulation_20260103_143238.json  simulation_20260103_143949.json  simulation_20260103_151505.json  simulation_20260103_152559.json  simulation_20260103_153835.json  simulation_20260103_160739.json  simulation_20260103_162139.json  simulation_20260104_092421.json  simulation_20260104_100937.json  simulation_20260104_134800.json  simulation_20260104_140005.json  simulation_20260104_142108.json  simulation_20260104_152550.json  simulation_20260104_182133.json  simulation_20260104_203348.json
tests/: conftest.py  test_e2e_agentic_workflow.py
tools/simulation/: pyproject.toml
tools/simulation/src/learner_sim/: __init__.py  prompts.py  simulator.py
tools/simulation/src/simulation/: __init__.py  main.py  runner.py
tools/simulation/tests/test_learner_sim_module/: test_learner_sim.py
tools/simulation/tests/test_simulation_module/: __init__.py  test_simulation.py
(+250 files in other folders)
