[project]
name = "ltt"
version = "0.1.0"
description = "Learning Task Tracker - A data tooling layer for AI tutoring agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic",
    "sqlalchemy",
    "asyncpg",
    "psycopg2-binary",
    "greenlet",
    "alembic",
    "typer",
    "fastapi",
    "uvicorn",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "mypy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501", "F821"]  # F821: SQLAlchemy forward references

[tool.ruff.lint.per-file-ignores]
"src/ltt/db/migrations/env.py" = ["E402"]  # Need to load .env before imports

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
