[project]
name = "beadslocal"
version = "0.1.0"
description = "Learning Task Tracker - AI tutoring platform"
readme = "README.md"
requires-python = ">=3.12"

[tool.uv.workspace]
members = [
    "services/ltt-core",
    "services/api-server",
    "services/agent-tutor",
    "tools/simulation",
]

[tool.uv.sources]
ltt-core = { workspace = true }
api-server = { workspace = true }
agent-tutor = { workspace = true }

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "mypy",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501", "F821"]  # F821: SQLAlchemy forward references

[tool.ruff.lint.per-file-ignores]
"services/ltt-core/src/ltt/db/migrations/env.py" = ["E402"]  # Need to load .env before imports

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["services/*/tests", "tools/*/tests"]
pythonpath = ["services/ltt-core/src", "services/api-server/src", "services/agent-tutor/src", "tools/simulation/src"]
addopts = "-m 'not integration'"
markers = [
    "integration: slow integration/e2e tests (run with: pytest -m integration)",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
]
