[project]
name = "agent-tutor"
version = "0.1.0"
description = "LLM tutoring agent"
requires-python = ">=3.12"
dependencies = [
    "ltt-core",
    "langgraph>=1.0.5",
    "langchain>=1.2.0",
    "langchain-anthropic>=1.3.0",
    "langchain-core>=1.2.6",
    "aiomysql>=0.3.2",
    "rich",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent"]
