[project]
name = "api-server"
version = "0.1.0"
description = "FastAPI REST API for LTT"
requires-python = ">=3.12"
dependencies = [
    "ltt-core",
    "fastapi",
    "uvicorn",
    "httpx",
    "python-dotenv",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api"]
