[project]
name = "ltt-core"
version = "0.1.0"
description = "Core Learning Task Tracker engine"
requires-python = ">=3.12"
dependencies = [
    "ltt-settings",
    "pydantic>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg",
    "psycopg2-binary",
    "greenlet",
    "alembic",
    "typer",
    "rich",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ltt"]
