[project]
name = "ltt-settings"
version = "0.1.0"
description = "Shared settings for all LTT services — single source of truth for LTT_* env vars"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings>=2.0.0",
    "python-dotenv",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ltt_settings"]
