[project]
name = "simulation"
version = "0.1.0"
description = "Learner simulation tools for testing"
requires-python = ">=3.12"
dependencies = [
    "ltt-core",
    "rich",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/simulation", "src/learner_sim"]
